--- a/wp-content/themes/trek-travel-theme/src/scss/_nav.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_nav.scss
@@ -182,7 +182,7 @@
   }
 
   #mega-menu-wrap-main-menu #mega-menu-main-menu .mega-sub-menu .mega-sub-menu .mega-sub-menu .mega-sub-menu {
-    display: block !important;
+    display: block;
   }
   #mega-menu-wrap-main-menu #mega-menu-main-menu > li > a {
     display: flex !important;
