--- a/wp-content/themes/trek-travel-theme/src/scss/pages/testimonials.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/pages/testimonials.scss
@@ -4,9 +4,14 @@
         font-weight: 600;
     }
 
-    >:nth-last-child(even) {
-        background-color: $gray-300;
+    .m-header {
+        color: white;
+        text-align: center;
     }
+
+    // >:nth-child(even) {
+    //     background-color: black;
+    // }
 
     .content-box {
         margin-top: 50px;
@@ -32,28 +37,282 @@
 
     }
 
-    #t-form .f-box {
-        background-color: white;
-        -webkit-box-shadow: 0px 10px 15px 2px rgba(0, 0, 0, 0.3);
-        box-shadow: 0px 10px 15px 2px rgba(0, 0, 0, 0.3);
-        border: 3px solid $blue;
-        border-radius: 5px;
-        padding: 30px;
+    
 
-        .gform-theme--foundation .gfield textarea.large {
-            min-block-size: 10rem;
+    .swiper-wrapper {
+        height: 600px;
+        align-items: stretch;
+        // justify-content: center;
+        // padding: 50px 20px;
+          
+    }
+
+    .media-repeater {
+        background-color: black;
+        padding: 50px 0;
+
+        @include media-breakpoint-up(xl) {
+            .swiper-button-prev,
+            .swiper-button-next {
+              display: none !important;
+            }
+          }
+
+        .m-header {
+            margin-bottom: 50px;
         }
 
-        .gform-theme--foundation .gform_footer {
-            justify-content: center;
-            input {
-                background-color: black;
-                font-size: 18px;
-                padding: 15px 25px;
-                text-transform: capitalize;
+        .media-swiper {
+            padding: 50px 20px;
+        }
+
+        .row {
+            justify-content: space-around;
+        }
+
+        .swiper-slide {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            // max-width: 350px;
+            // flex-shrink: initial;
+        }
+
+        .media-item {
+            display: flex;
+            border: 1px solid $blue;
+            border-radius: 5px;
+            transition: all 0.3s;
+            overflow: hidden;
+            width: fit-content;
+
+            .video-wrapper {
+                position: relative;
+                width: 100%;
+                height: 100%;
+                border-radius: 5px;
+                overflow: hidden;
+              
+                .video-element {
+                  width: 100%;
+                  height: 100%;
+                  display: flex;
+                }
+              
+                .video-overlay {
+                  position: absolute;
+                  inset: 0;
+                  z-index: 2;
+                  height: 100%;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  flex-direction: column;
+                  background: rgba(0, 0, 0, 0.35);
+                  cursor: pointer;
+                  transition: opacity 0.5s ease;
+              
+                  &.faded {
+                    opacity: 0;
+                    pointer-events: none;
+                  }
+
+                  .v-grad {
+                    background: linear-gradient(0deg,rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(255, 255, 255, 0) 100%);
+                    height: 100%;
+                    width: 100%;
+                    position: absolute;
+                    z-index: 2;
+                  }
+              
+                  .video-preview-img {
+                    position: absolute;
+                    inset: 0;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    z-index: 1;
+                    
+                  }
+              
+                  .video-overlay-text,
+                  .play-icon-overlay {
+                    z-index: 2;
+                    color: #fff;
+                    text-shadow: 0 0 8px rgba(0, 0, 0, 0.7);
+                  }
+              
+                  .video-overlay-text {
+                    position: absolute;
+                    bottom: 20px;
+                    font-size: 1.25rem;
+                    font-weight: 600;
+                    padding: 0 2rem 1rem;
+                    text-align: center;
+                    &::before, &::after {
+                        position: absolute;
+                    }
+
+                    &::before {
+                        content: open-quote;
+                        font-size: 4rem;
+                        color: $blue;
+                        left: 0;
+                    }
+                    &::after {
+                        content: close-quote;
+                        font-size: 4rem;
+                        color: $blue;
+                        bottom: -25%;
+                        right: 0;
+                    }
+                  }
+              
+                  .play-icon-overlay {
+                    font-size: 2rem;
+                    margin-top: 1rem;
+                    border-radius: 50%;
+                    padding: 0.5rem 0.75rem;
+                  }
+                }
+              }
+
+              &:hover {
+                -webkit-box-shadow: 5px 5px 15px 5px #28AAE1; 
+                box-shadow: 0px 0px 15px 5px #28AAE1;
+
+                
+
+
+                .video-wrapper .video-overlay {
+                    .v-grad {
+                        background: linear-gradient(0deg,rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.25) 50%, rgba(255, 255, 255, 0) 100%);
+                    }
+
+                    .play-icon-overlay {
+                        text-shadow: 0px 0px 20px #000000;
+                    }
+                } 
             }
-        } 
-          
+              
+        }
+
         
+    }
+
+    #t-form {
+        background-color: $gray-400;
+
+        .f-box {
+            background-color: white;
+            -webkit-box-shadow: 0px 10px 15px 2px rgba(0, 0, 0, 0.3);
+            box-shadow: 0px 10px 15px 2px rgba(0, 0, 0, 0.3);
+            border: 3px solid $blue;
+            border-radius: 5px;
+            padding: 30px;
+    
+            .gform-theme--foundation .gfield textarea.large {
+                min-block-size: 10rem;
+            }
+    
+            .gform-theme--foundation .gform_footer {
+                justify-content: center;
+                input {
+                    background-color: black;
+                    font-size: 18px;
+                    padding: 15px 25px;
+                    text-transform: capitalize;
+                }
+            } 
+              
+            
+        }
+        // .populate-grouped-products {
+            .select2-dropdown .select2-search--dropdown {
+                padding: 0.25rem;
+            }
+            
+            .select2-search--dropdown .select2-search__field {
+                border: 1px solid #ccc;
+                padding: 0.25rem 0.5rem;
+                font-size: 1rem;
+                box-shadow: none;
+            }
+            
+            .select2-container--default .select2-selection--single, .select2-container--default .select2-selection--multiple {
+                // color: #444;
+                // line-height: 28px;
+                padding: 0.4rem 0.75rem;
+                height: auto;
+            }
+            .select2-search {
+                // color: #444;
+                // line-height: 28px;
+                width: 100%;
+                font-style: normal;
+            }
+        // // }
+
+        /* Match single and multi-select input appearance */
+.select2-container--default .select2-selection--multiple {
+    padding: 6px 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 1rem;
+    min-height: 40px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+/* Placeholder appearance for multi-select */
+.select2-container--default .select2-selection--multiple .select2-search--inline .select2-search__field {
+    font-size: 1rem;
+    margin: 0;
+    padding: 0;
+    height: 24px;
+    line-height: 1.5;
+}
+
+/* When no items selected, show consistent height */
+.select2-container--default.select2-container--focus .select2-selection--multiple {
+    // border-color: #999;
+}
+
+/* Padding fix for empty state */
+.select2-selection__rendered {
+    padding: 2px 0px;
+}
+
+/* Adjust tag spacing */
+.select2-selection__choice {
+    margin: 2px 4px 2px 0;
+    padding: 3px 6px;
+    font-size: 0.875rem;
+}
+.select2-selection__placeholder {
+    color: black;
+}
+
+.select2-selection__clear {
+    background-color: $blue;
+    color: black;
+}
+.select2-selection__choice {
+    width: fit-content;
+  padding-left: 20px;
+}
+.select2-selection__choice__remove {
+    color: black;
+    background-color: $blue;
+    padding: 2px;
+  top: -50%;
+}
+#select2-input_27_10-container {
+    width: auto;
+}
+       
+
     }
 }
