--- a/wp-content/themes/trek-travel-theme/src/scss/_forms.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_forms.scss
@@ -31,11 +31,11 @@
 
 .login-form,
 .reset-form {
-    margin-top: 6rem;
-    margin-bottom: 7.9rem;
+    // margin-top: 6rem;
+    // margin-bottom: 7.9rem;
     @include media-breakpoint-down(lg) {
-        margin-top: 3.5rem;
-        margin-bottom: 4.9rem;
+        // margin-top: 3.5rem;
+        // margin-bottom: 4.9rem;
     }
     .reset-p {
         font-size: 1.125rem;
@@ -134,8 +134,8 @@
 // register form styling
 
 .register-form{
-    margin-top: 6rem;
-    margin-bottom: 7.9rem;
+    // margin-top: 6rem;
+    // margin-bottom: 7.9rem;
 
     .re-register-info {
         font-size: 14px;
