--- a/wp-content/themes/trek-travel-theme/src/scss/pages/common.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/pages/common.scss
@@ -9,9 +9,12 @@
 }
 
 #login-register-modal {
+  max-width: 600px; // ← consistent width
+  width: 90vw;
+  margin: auto;
   background: white;
   border-radius: 5px;
-  padding: 3rem;
+  padding: 1.5rem;
 
 
   .sign-logo {
@@ -53,7 +56,16 @@
 
   .sign-text {
     text-align: center;
+    word-break: break-word; // prevent overflow
+    max-width: 100%;
     // width: 50%;
+  }
+
+  .woocommerce-privacy-policy-text {
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+    width: 100%;
+    word-wrap: break-word;
   }
 
   @include media-breakpoint-up(sm) {
@@ -99,6 +111,32 @@
     // }
   }
 
+  .fixed-tab-content {
+    position: relative;
+    min-height: 650px;
+    // overflow: hidden;
+  }
+
+  .tab-pane {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    transition: opacity 0.3s ease-in-out;
+  }
+
+  .tab-pane:not(.show) {
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  .tab-pane.show.active {
+    position: relative;
+    height: 100%;
+    opacity: 1;
+    pointer-events: auto;
+  }
+
 }
 
 // Sign in
@@ -124,7 +162,22 @@
 // }
 
 .login-form {
-  margin: auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 650px;
+
+  form {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    .f-btm {
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      margin-top: auto;
+    }
+  }
 
   .sign-btns {
     justify-content: space-between;
