--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -8603,6 +8603,22 @@ h5, .h5 {
   border-color: #000000;
   border-radius: 4px 4px 4px 4px;
 }
+.btn.btn-bb {
+  font-family: "Roboto", Sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: normal;
+  fill: #FFFFFF;
+  color: #FFFFFF;
+  background-color: black;
+  border-style: solid;
+  border-width: 2px 2px 2px 2px;
+  border-color: black;
+  border-radius: 4px;
+}
+.btn.btn-bb:hover {
+  border-color: #28AAE1;
+}
 
 .btn-primary {
   --bs-btn-color: #fff;
@@ -11400,14 +11416,7 @@ textarea.form-control-lg {
 .reset-form .form-group.forgot-pwd a:hover {
   color: #000;
 }
-.login-form .form-group .login-submit,
-.reset-form .form-group .login-submit {
-  color: #fff;
-  background-color: #000;
-}
-.login-form .form-group .login-submit,
 .login-form .form-group .reset-submit,
-.reset-form .form-group .login-submit,
 .reset-form .form-group .reset-submit {
   width: 100%;
   border-radius: 0.25rem;
@@ -23376,6 +23385,11 @@ form.trek-trip-finder-form input:hover, form.trek-trip-finder-form i:hover {
   }
 }
 
+body.lity-login-modal .lity {
+  background: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(3px);
+}
+
 .lity-active button.lity-close {
   position: absolute;
   top: -20px;
@@ -23385,12 +23399,12 @@ form.trek-trip-finder-form input:hover, form.trek-trip-finder-form i:hover {
 }
 
 #login-register-modal {
-  max-width: 600px;
+  max-width: 500px;
   width: 90vw;
   margin: auto;
   background: white;
   border-radius: 5px;
-  padding: 1.5rem;
+  padding: 1rem;
 }
 #login-register-modal .sign-logo {
   display: flex;
@@ -23399,7 +23413,7 @@ form.trek-trip-finder-form input:hover, form.trek-trip-finder-form i:hover {
   display: flex;
   object-fit: contain;
   width: 100%;
-  max-height: 200px;
+  max-height: 150px;
 }
 #login-register-modal .nav-tabs .nav-item {
   flex: 1;
@@ -23462,7 +23476,7 @@ form.trek-trip-finder-form input:hover, form.trek-trip-finder-form i:hover {
 }
 #login-register-modal .fixed-tab-content {
   position: relative;
-  min-height: 650px;
+  height: 500px;
 }
 #login-register-modal .tab-pane {
   position: absolute;
@@ -23493,7 +23507,7 @@ form.trek-trip-finder-form input:hover, form.trek-trip-finder-form i:hover {
 .login-form {
   display: flex;
   flex-direction: column;
-  min-height: 650px;
+  min-height: 500px;
 }
 .login-form form {
   height: 100%;
@@ -23520,6 +23534,10 @@ form.trek-trip-finder-form input:hover, form.trek-trip-finder-form i:hover {
 }
 .login-form .form-floating {
   margin-bottom: 1rem !important;
+}
+.login-form .form-floating .form-control, .login-form .form-floating label {
+  height: 3rem;
+  padding: 0.5rem 0.75rem;
 }
 .login-form .login-title {
   margin-bottom: 15px;
