--- a/wp-content/themes/trek-travel-theme/src/scss/_buttons.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_buttons.scss
@@ -108,6 +108,24 @@
     border-color: #000000;
     border-radius: 4px 4px 4px 4px;
   }
+
+  &.btn-bb {
+    font-family: "Roboto", Sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: normal;
+    fill: #FFFFFF;
+    color: #FFFFFF;
+    background-color: black;
+    border-style: solid;
+    border-width: 2px 2px 2px 2px;
+    border-color: black;
+    border-radius: 4px;
+
+    &:hover {
+      border-color: $blue;
+    }
+  }
   
 }
 
