--- a/wp-content/themes/trek-travel-theme/src/scss/_forms.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_forms.scss
@@ -89,11 +89,11 @@
             }
         }
 
-        .login-submit {
-            color: $white;
-            background-color: $black;
-        }
-        .login-submit,
+        // .login-submit {
+        //     color: $white;
+        //     background-color: $black;
+        // }
+        // .login-submit,
         .reset-submit {
             width:100%;
             border-radius: $border-radius-sm;
